Remove hydra/core type parameters from Hydra-Java